tests/ui/ferrocene/compiler-arguments/upper_c_opt-level/upper_c_opt-level_empty.rs
//@ check-fail
//@ compile-flags: -Copt-level
//~? ERROR requires a string

fn main() {}

// ferrocene-annotations: um_rustc_C_opt_level
